@@ -1,3 +1,8 @@
+2007-05-22 Borut Razem <borut.razem AT siol.net>
+
+	* index.php: added News - sdcc 2.7.0 RC2, availability of
+	  "Anatomy of a Compiler A Retargetable ANSI-C Compiler"
+
 2007-05-21 Borut Razem <borut.razem AT siol.net>
 
 	* index.php: fixed ASXXXX typo
